--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 <body>
 <div class="wrapper">
     <header>
-        <div class="logo"></div>
         <nav class="tabs">
             <a class="tab logo" href="#home"></a>
             <ul>
@@ -20,20 +19,26 @@
         </nav>
     </header>
     <div class="tab-panes">
-        <div class="pane" id="home">
-            I'm LeoDT <br> I create website
+        <div class="pane show" id="home">
+            I'm LeoDT<br>I create website
         </div>
         <div class="pane" id="about">
             <div class="about-content">
-                <p>Hello, my name is Liu Cheng. I’m a web developer and living in Shanghai.</p>
+                <p>Hello, my name is Liu Cheng. I'm a web developer and living in Shanghai.</p>
                 <p>After manage several bbs sites in my highschool, I start build website myself in the college, Huazhong University of Science and Technology.</p>
-                <p>I joined the Bingyan, a great college web team, as a front-end developer, then I became the team manager until my graduate. Bingyan gave me knowledge and opportunity.</p>
-                <p>Worked in Tencent, mknote in Shanda Innovation, and Nexjoy for these years.</p>
-                <p>I’m a javascripter and pythoner, I discover and learn new things.</p>
+                <p>I joined the <a href="http://www.bingyan.net" target="_blank" title="Bingyan Studio">Bingyan</a>,
+                    a great college web team, as a front-end developer, then I became the team manager until my graduate. Bingyan gave me knowledge and opportunity.</p>
+                <p>Worked in <a href="http://www.tencent.com" target="_blank" title="Tencent Inc.">Tencent</a>,
+                    <a href="http://www.mknote.com" target="_blank" title="mknote">mknote</a> in
+                    <a href="http://in.sdo.com/" target="_blank" title="Shanda Innovations Official">Shanda Innovations</a>, and
+                    <a href="http://www.nexjoy.com" target="_blank" title="Nexjoy Official">Nexjoy</a> for these years.</p>
+                <p>I'm a javascripter and pythoner, I discover and learn new things.</p>
             </div>
-            <img src="img/avatar.png" alt="LeoDT's Avatar">
+            <img src="img/avatar.png" alt="LeoDT's Avatar" class="avatar">
         </div>
-        <div class="pane" id="skills"></div>
+        <div class="pane show" id="skills">
+
+        </div>
         <div class="pane" id="links"></div>
     </div>
 </div>
