--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </nav>
     </header>
     <div class="tab-panes">
-        <div class="pane show" id="home">
+        <div class="pane" id="home">
             I'm LeoDT<br>I create website
         </div>
         <div class="pane" id="about">
@@ -37,7 +37,50 @@
             <img src="img/avatar.png" alt="LeoDT's Avatar" class="avatar">
         </div>
         <div class="pane show" id="skills">
-
+            <div class="skill">
+                <div class="bar">
+                    <div class="bar-inner blue" style="width: 108px;"></div>
+                    <span class="name">html/css</span>
+                </div>
+                <span class="percent">90%</span>
+                <div class="extra">
+                    HTML5, CSS3, bootstrap
+                </div>
+                <span class="arrow"></span>
+            </div>
+            <div class="skill">
+                <div class="bar">
+                    <div class="bar-inner green"  style="width: 102px;"></div>
+                    <span class="name">javascript</span>
+                </div>
+                <span class="percent">85%</span>
+                <div class="extra">
+                    jQuery, Backbonejs, Chrome Extensions
+                </div>
+                <span class="arrow"></span>
+            </div>
+            <div class="skill">
+                <div class="bar">
+                    <div class="bar-inner purple"  style="width: 96px;"></div>
+                    <span class="name">python</span>
+                </div>
+                <span class="percent">80%</span>
+                <div class="extra">
+                    django, bottlepy, fabric
+                </div>
+                <span class="arrow"></span>
+            </div>
+            <div class="skill last">
+                <div class="bar">
+                    <div class="bar-inner pink"  style="width: 90px;"></div>
+                    <span class="name">linux</span>
+                </div>
+                <span class="percent">75%</span>
+                <div class="extra">
+                    Redis, MongoDB, nginx
+                </div>
+                <span class="arrow"></span>
+            </div>
         </div>
         <div class="pane" id="links"></div>
     </div>
