--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>LeoDT - Web developer</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 </head>
 <body>
 <div class="wrapper">
@@ -36,7 +37,7 @@
             </div>
             <img src="img/avatar.png" alt="LeoDT's Avatar" class="avatar">
         </div>
-        <div class="pane show" id="skills">
+        <div class="pane" id="skills">
             <div class="skill">
                 <div class="bar">
                     <div class="bar-inner blue" style="width: 108px;"></div>
@@ -82,7 +83,12 @@
                 <span class="arrow"></span>
             </div>
         </div>
-        <div class="pane" id="links"></div>
+        <div class="pane show" id="links">
+            <a class="link" href="https://github.com/LeoDT" title="Github"><i class="fa fa-github-alt"></i></a>
+            <a class="link" href="http://www.linkedin.com/pub/cheng-liu/30/562/ab2" title="Linkedin"><i class="fa fa-linkedin"></i></a>
+            <a class="link" href="https://twitter.com/leodt" title="@leodt"><i class="fa fa-twitter"></i></a>
+            <a class="link" href="mailto:leojoy710@gmail.com" title="Email"><i class="fa fa-envelope"></i></a>
+        </div>
     </div>
 </div>
 <script src="js/main.js"></script>
