basic tab change

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="wrapper">
     <header>
         <nav class="tabs">
-            <a class="tab logo" href="#home"></a>
+            <a class="tab logo active" href="#home"></a>
             <ul>
                 <li><a class="tab" href="#about">About</a></li>
                 <li><a class="tab" href="#skills">Skills</a></li>
@@ -20,7 +20,7 @@
         </nav>
     </header>
     <div class="tab-panes">
-        <div class="pane" id="home">
+        <div class="pane show" id="home">
             I'm LeoDT<br>I create website
         </div>
         <div class="pane" id="about">
@@ -83,7 +83,7 @@
                 <span class="arrow"></span>
             </div>
         </div>
-        <div class="pane show" id="links">
+        <div class="pane" id="links">
             <a class="link" href="https://github.com/LeoDT" title="Github"><i class="fa fa-github-alt"></i></a>
             <a class="link" href="http://www.linkedin.com/pub/cheng-liu/30/562/ab2" title="Linkedin"><i class="fa fa-linkedin"></i></a>
             <a class="link" href="https://twitter.com/leodt" title="@leodt"><i class="fa fa-twitter"></i></a>
@@ -91,6 +91,7 @@
         </div>
     </div>
 </div>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
