switch transition finished

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         </nav>
     </header>
     <div class="tab-panes">
-        <div class="pane show" id="home">
+        <div class="pane show fade" id="home">
             I'm LeoDT<br>I create website
         </div>
-        <div class="pane" id="about">
+        <div class="pane fade" id="about">
             <div class="about-content">
                 <p>Hello, my name is Liu Cheng. I'm a web developer and living in Shanghai.</p>
                 <p>After manage several bbs sites in my highschool, I start build website myself in the college, Huazhong University of Science and Technology.</p>
@@ -38,7 +38,7 @@
             <img src="img/avatar.png" alt="LeoDT's Avatar" class="avatar">
         </div>
         <div class="pane" id="skills">
-            <div class="skill">
+            <div class="skill fade">
                 <div class="bar">
                     <div class="bar-inner blue" style="width: 108px;"></div>
                     <span class="name">html/css</span>
@@ -49,7 +49,7 @@
                 </div>
                 <span class="arrow"></span>
             </div>
-            <div class="skill">
+            <div class="skill fade">
                 <div class="bar">
                     <div class="bar-inner green"  style="width: 102px;"></div>
                     <span class="name">javascript</span>
@@ -60,7 +60,7 @@
                 </div>
                 <span class="arrow"></span>
             </div>
-            <div class="skill">
+            <div class="skill fade">
                 <div class="bar">
                     <div class="bar-inner purple"  style="width: 96px;"></div>
                     <span class="name">python</span>
@@ -71,7 +71,7 @@
                 </div>
                 <span class="arrow"></span>
             </div>
-            <div class="skill last">
+            <div class="skill last fade">
                 <div class="bar">
                     <div class="bar-inner pink"  style="width: 90px;"></div>
                     <span class="name">linux</span>
@@ -84,10 +84,10 @@
             </div>
         </div>
         <div class="pane" id="links">
-            <a class="link" href="https://github.com/LeoDT" title="Github"><i class="fa fa-github-alt"></i></a>
-            <a class="link" href="http://www.linkedin.com/pub/cheng-liu/30/562/ab2" title="Linkedin"><i class="fa fa-linkedin"></i></a>
-            <a class="link" href="https://twitter.com/leodt" title="@leodt"><i class="fa fa-twitter"></i></a>
-            <a class="link" href="mailto:leojoy710@gmail.com" title="Email"><i class="fa fa-envelope"></i></a>
+            <span class="link fade"><a href="https://github.com/LeoDT" title="Github"><i class="fa fa-github-alt"></i></a></span>
+            <span class="link fade"><a href="http://www.linkedin.com/pub/cheng-liu/30/562/ab2" title="Linkedin"><i class="fa fa-linkedin"></i></a></span>
+            <span class="link fade"><a href="https://twitter.com/leodt" title="@leodt"><i class="fa fa-twitter"></i></a></span>
+            <span class="link fade"><a href="mailto:leojoy710@gmail.com" title="Email"><i class="fa fa-envelope"></i></a></span>
         </div>
     </div>
 </div>
