add transition to skill bars

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="pane" id="skills">
             <div class="skill fade">
                 <div class="bar">
-                    <div class="bar-inner blue" style="width: 108px;"></div>
+                    <div class="bar-inner blue" data-transition="width: 108px;"></div>
                     <span class="name">html/css</span>
                 </div>
                 <span class="percent">90%</span>
@@ -51,7 +51,7 @@
             </div>
             <div class="skill fade">
                 <div class="bar">
-                    <div class="bar-inner green"  style="width: 102px;"></div>
+                    <div class="bar-inner green"  data-transition="width: 102px;"></div>
                     <span class="name">javascript</span>
                 </div>
                 <span class="percent">85%</span>
@@ -62,7 +62,7 @@
             </div>
             <div class="skill fade">
                 <div class="bar">
-                    <div class="bar-inner purple"  style="width: 96px;"></div>
+                    <div class="bar-inner purple"  data-transition="width: 96px;"></div>
                     <span class="name">python</span>
                 </div>
                 <span class="percent">80%</span>
@@ -73,7 +73,7 @@
             </div>
             <div class="skill last fade">
                 <div class="bar">
-                    <div class="bar-inner pink"  style="width: 90px;"></div>
+                    <div class="bar-inner pink"  data-transition="width: 90px;"></div>
                     <span class="name">linux</span>
                 </div>
                 <span class="percent">75%</span>
