--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <p>Hello, my name is Liu Cheng. I'm a web developer and living in Shanghai.</p>
                 <p>After manage several bbs sites in my highschool, I start build website myself in the college, Huazhong University of Science and Technology.</p>
                 <p>I joined the <a href="http://www.bingyan.net" target="_blank" title="Bingyan Studio">Bingyan</a>,
-                    a great college web team, as a front-end developer, then I became the team manager until my graduate. Bingyan gave me knowledge and opportunity.</p>
+                    a great college web team, as a front-end developer, then I became the team manager. Bingyan gave me knowledge and opportunity.</p>
                 <p>Worked in <a href="http://www.tencent.com" target="_blank" title="Tencent Inc.">Tencent</a>,
                     <a href="http://www.mknote.com" target="_blank" title="mknote">mknote</a> in
                     <a href="http://in.sdo.com/" target="_blank" title="Shanda Innovations Official">Shanda Innovations</a>, and
