--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
             </div>
         </div>
         <div class="pane" id="links">
-            <span class="link fade"><a href="https://github.com/LeoDT" title="Github"><i class="fa fa-github-alt"></i></a></span>
-            <span class="link fade"><a href="http://www.linkedin.com/pub/cheng-liu/30/562/ab2" title="Linkedin"><i class="fa fa-linkedin"></i></a></span>
-            <span class="link fade"><a href="https://twitter.com/leodt" title="@leodt"><i class="fa fa-twitter"></i></a></span>
-            <span class="link fade"><a href="mailto:leojoy710@gmail.com" title="Email"><i class="fa fa-envelope"></i></a></span>
+            <span class="link fade"><a href="https://github.com/LeoDT" title="Github" target="_blank"><i class="fa fa-github-alt"></i></a></span>
+            <span class="link fade"><a href="http://www.linkedin.com/pub/cheng-liu/30/562/ab2" title="Linkedin" target="_blank"><i class="fa fa-linkedin"></i></a></span>
+            <span class="link fade"><a href="https://twitter.com/leodt" title="@leodt" target="_blank"><i class="fa fa-twitter"></i></a></span>
+            <span class="link fade"><a href="mailto:leojoy710@gmail.com" title="Email" target="_blank"><i class="fa fa-envelope"></i></a></span>
         </div>
     </div>
 </div>
