add transition for skill detail

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
                     <span class="name">html/css</span>
                 </div>
                 <span class="percent">90%</span>
-                <div class="extra">
+                <div class="extra fade">
                     HTML5, CSS3, bootstrap
                 </div>
-                <span class="arrow"></span>
+                <span class="arrow fade"></span>
             </div>
             <div class="skill fade">
                 <div class="bar">
@@ -55,10 +55,10 @@
                     <span class="name">javascript</span>
                 </div>
                 <span class="percent">85%</span>
-                <div class="extra">
+                <div class="extra fade">
                     jQuery, Backbonejs, Chrome Extensions
                 </div>
-                <span class="arrow"></span>
+                <span class="arrow fade"></span>
             </div>
             <div class="skill fade">
                 <div class="bar">
@@ -66,10 +66,10 @@
                     <span class="name">python</span>
                 </div>
                 <span class="percent">80%</span>
-                <div class="extra">
+                <div class="extra fade">
                     django, bottlepy, fabric
                 </div>
-                <span class="arrow"></span>
+                <span class="arrow fade"></span>
             </div>
             <div class="skill last fade">
                 <div class="bar">
@@ -77,10 +77,10 @@
                     <span class="name">linux</span>
                 </div>
                 <span class="percent">75%</span>
-                <div class="extra">
+                <div class="extra fade">
                     Redis, MongoDB, nginx
                 </div>
-                <span class="arrow"></span>
+                <span class="arrow fade"></span>
             </div>
         </div>
         <div class="pane" id="links">
