--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
         </div>
     </div>
 </div>
+<span class="fa fa-twitter preload" style="visibility: hidden"></span>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="js/main.js"></script>
 </body>
