--- a/index.html
+++ b/index.html
@@ -31,9 +31,8 @@
                     a great college web team, as a front-end developer, then I became the team manager. Bingyan gave me knowledge and opportunity.</p>
                 <p>Worked in <a href="http://www.tencent.com" target="_blank" title="Tencent Inc.">Tencent</a>,
                     <a href="http://www.mknote.com" target="_blank" title="mknote">mknote</a> in
-                    <a href="http://in.sdo.com/" target="_blank" title="Shanda Innovations Official">Shanda Innovations</a>,
-                    <a href="http://www.nexjoy.com" target="_blank" title="Nexjoy Official">Nexjoy</a>, and <a href="http://www.datayes.com" target="_blank" title="Datayes Official">Datayes</a> for these years.</p>
-                <p>I'm write lot javascript now, I discover and create new things.</p>
+                    <a href="http://in.sdo.com/" target="_blank" title="Shanda Innovations Official">Shanda Innovations</a>. And now, I work at <a href="http://www.datayes.com" target="_blank" title="Datayes Official">Datayes</a> as Front-end Architect.</p>
+                <p>I'm write lots of javascript, I discover and create new things.</p>
             </div>
             <img src="img/avatar.png" alt="LeoDT's Avatar" class="avatar">
         </div>
